<resources>
    <string name="app_name">BabyApp2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enter_item">Enter baby needs</string>
    <string name="enter_item_color">COLOR</string>
    <string name="baby_item_quentity">QUANTITY</string>
    <string name="enter_your_baby_item">ITEM</string>
    <string name="enter_the_size_of_item">SIZE</string>
    <string name="sure_text">Are you sure?</string>
    <string name="no_text">No</string>
    <string name="yes_text">Yes</string>
    <string name="edit_item">Edit Item</string>
    <string name="update_text">Update</string>
</resources>