<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:padding="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/title"
                android:text="@string/enter_item"
                android:textStyle="italic"
                android:textSize="18sp"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            
            <EditText
                android:id="@+id/baby_item"
                android:layout_below="@id/title"
                android:hint="@string/enter_your_baby_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/item_quentity"
                android:inputType="number"
                android:layout_below="@id/baby_item"
                android:hint="@string/baby_item_quentity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/item_color"
                android:layout_below="@id/item_quentity"
                android:hint="@string/enter_item_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <EditText
                android:id="@+id/item_size"
                android:inputType="number"
                android:layout_below="@id/item_color"
                android:hint="@string/enter_the_size_of_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/save_button"
                android:layout_below="@id/item_size"
                android:text="Saved"
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:layout_marginEnd="5dp"
                android:background="@color/colorAccent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>